ItEr37S16RFMaquetacionDesenhoAplicacionItEr36S18: Fixed problem with selector for main-area overflowable area

--- a/navalplanner-webapp/src/main/webapp/common/css/navalpro_zk.css
+++ b/navalplanner-webapp/src/main/webapp/common/css/navalpro_zk.css
@@ -855,8 +855,7 @@ span.z-dottree-ico, span.z-dottree-line {
     display:none;
 }
 
-
-.main-area .z-center-body {
+.main-area > .z-center-body:first-child {
     height: auto !important;
     width: auto !important;
 }
